kubernetes/linkding/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: linkding
  labels:
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      enableServiceLinks: true
      containers:
      - name: linkding
        image: sissbruecker/linkding:latest
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: linkding-data
          mountPath: /etc/linkding/data
      volumes:
      - name: linkding-data
        persistentVolumeClaim:
          claimName: linkding-pvc
